[gd_scene load_steps=5 format=2]

[ext_resource path="res://level.gd" type="Script" id=1]
[ext_resource path="res://grandma.tscn" type="PackedScene" id=2]
[ext_resource path="res://field.tscn" type="PackedScene" id=3]
[ext_resource path="res://spawner.tscn" type="PackedScene" id=4]

[node name="level" type="Node2D" groups=[
"level",
]]
position = Vector2( 540, 1800 )
script = ExtResource( 1 )

[node name="back" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -1800.0
margin_right = 540.0
margin_bottom = 120.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 1080, 1920 )
color = Color( 0, 0, 0, 0.313726 )

[node name="screen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -525.0
margin_top = -1800.0
margin_right = 525.0
grow_horizontal = 2
grow_vertical = 0
color = Color( 1, 1, 1, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grandma" parent="." instance=ExtResource( 2 )]

[node name="field" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_top = -1800.0
margin_bottom = -1800.0

[node name="spawner0" parent="." instance=ExtResource( 4 )]
position = Vector2( -525, -75 )
queue_color = PoolColorArray( 0.65098, 0.0470588, 0.0470588, 1 )
tick_color = PoolIntArray( 25 )
tick_offset = 3

[node name="spawner1" parent="." instance=ExtResource( 4 )]
position = Vector2( -525, -225 )
queue_color = PoolColorArray( 0.682353, 0.796078, 0.027451, 1, 0.627451, 0.117647, 0.627451, 1 )
tick_color = PoolIntArray( 15, 20 )

[node name="spawner2" parent="." instance=ExtResource( 4 )]
position = Vector2( 525, -225 )
tick_offset = 15

[node name="spawner3" parent="." instance=ExtResource( 4 )]
position = Vector2( 525, -75 )
queue_color = PoolColorArray( 0.858824, 0.933333, 0.0980392, 1 )
tick_color = PoolIntArray( 40 )

[node name="debug_tick" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_bottom = 60.0
grow_horizontal = 0
rect_scale = Vector2( 2, 2 )
text = "0"
align = 1
valign = 1

[node name="win_label" type="Label" parent="."]
visible = false
margin_left = 343.0
margin_top = 30.0
margin_right = 468.0
margin_bottom = 76.0
rect_scale = Vector2( 2, 2 )
text = "WIN!"

[editable path="spawner2"]
